# zh-openai-chatkit-advanced-samples

./: .gitignore  README.md  agents.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: cat_state.py  chat.py  constants.py  facts.py  main.py  memory_store.py  name_suggestions_widget.py  profile_card_widget.py  sample_widget.py  weather.py
examples/cat-lounge/: README.md  package-lock.json  package.json
examples/cat-lounge/backend/: README.md  pyproject.toml
examples/cat-lounge/backend/app/: cat_agent.py  cat_state.py  cat_store.py  main.py  memory_store.py  server.py
examples/cat-lounge/backend/app/widgets/: cat_name_suggestions.widget  cat_profile.widget  name_suggestions_widget.py  profile_card_widget.py
examples/cat-lounge/frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
examples/cat-lounge/scripts/: run-backend.sh
examples/customer-support/: README.md  package-lock.json  package.json
examples/customer-support/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
examples/customer-support/scripts/: run-backend.sh
examples/knowledge-assistant/: README.md  package-lock.json  package.json
examples/marketing-assets/: README.md  package-lock.json  package.json
examples/metro-map/: README.md  package-lock.json  package.json
examples/news-guide/: README.md  package-lock.json  package.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+191 files in other folders)
